--- a/Component/Badges.css
+++ b/Component/Badges.css
@@ -1,192 +1,177 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css';
-
-:root{
-    font-size: 62.5%;
+.component-display-container {
+	display: flex;
+	width: 100%;
+	margin: 1rem 0;
+	padding: 1rem;
+	border-radius: 0.3rem;
+	border: 2px solid #e6e6e6;
+	align-items: baseline;
+}
+.flex-items {
+	padding: 1rem 1rem 1rem 0;
+}
+.badge-container {
+	position: relative;
+}
+.avatar {
+	border: 2px solid var(--complimentary-text-color);
+	width: fit-content;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+.avatar-lg-size {
+	width: 15rem;
+	height: 15rem;
+	border-radius: 50%;
 }
-
-.component-display-container{
-    display: flex;
-    width: 100%;
-    margin: 1rem 0;
-    padding: 1rem;
-    border-radius: 0.3rem;
-    border: 2px solid #e6e6e6;
-    align-items: baseline;
+.image-lg {
+	height: 15rem;
 }
-.flex-items{
-    padding : 1rem 1rem 1rem 0;
+.reponsive-image {
+	width: 100%;
+	margin-top: 2rem;
 }
-.badge-container{
-    position: relative;
+.image-round {
+	border-radius: 50%;
 }
-.avatar{
-    border : 2px solid white;
-    width: fit-content;
-}
-
-.avatar-lg-size{
-    width: 15rem;
-    height: 15rem;
-    border-radius: 50%;
-}
-.image-lg{
-    height: 15rem;
-}
-.reponsive-image{
-    width: 100%;
-    margin-top: 2rem;
-}
-.image-round{
-    border-radius: 50%;
-}
-.status-badge{
-    padding: 2px;
-    border-radius: 50%;
-    border: 2px solid white;
-    display: flex;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    box-sizing: border-box;
-    font-size: 1em;
+.status-badge {
+	padding: 2px;
+	border-radius: 50%;
+	border: 2px solid var(--complimentary-text-color);
+	display: flex;
+	color: var(--complimentary-text-color);
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	box-sizing: border-box;
+	font-size: 1em;
 }
 
 .status-badge {
-    min-width: 2rem;
-    height: 1.85rem;
-    
+	min-width: 2rem;
+	height: 1.85rem;
 }
-.status-badge-online{
-    background-color: #1b7052 ;
-    left: 11em;
+.status-badge-online {
+	background-color: #1b7052;
+	left: 11em;
 }
-.avatar-md-size{
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
+.avatar-md-size {
+	width: 10rem;
+	height: 10rem;
+	border-radius: 50%;
 }
-.image-md{
-    height: 10rem;
+.image-md {
+	height: 10rem;
 }
-.status-badge-offline{
-    background-color: #dc3545;
-    left: 7em;
+.status-badge-offline {
+	background-color: #dc3545;
+	left: 7em;
 }
-.avatar-sm-size{
-    width: 7rem;
-    height: 7rem;
-    border-radius: 50%;
+.avatar-sm-size {
+	width: 7rem;
+	height: 7rem;
+	border-radius: 50%;
 }
-.image-sm{
-    height: 7rem;
+.image-sm {
+	height: 7rem;
 }
-.status-badge-away{
-    background-color: #ff9204;
-    left: 5em;
+.status-badge-away {
+	background-color: #ff9204;
+	left: 5em;
 }
-.avatar-xs-size{
-    width: 5rem;
-    height: 5rem;
-    border-radius: 50%;
+.avatar-xs-size {
+	width: 5rem;
+	height: 5rem;
+	border-radius: 50%;
 }
-.image-xs{
-    height: 5rem;
-}
-
-.status-badge-online-xs{
-    background-color: #1b7052 ;
-    height: 1.25rem;
-    left: 3.5em;
-    width: 1rem;
-    bottom: -2rem;
-}
-.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 1.5rem;
-    cursor: pointer;
-    border-radius: 0.5px;
-    font-size: 1rem;
-    position: relative;
-    margin-left: 4rem;
-    background-color: transparent;
-    color: #3e4152;
+.image-xs {
+	height: 5rem;
 }
 
-.badge-icon{
-    position: absolute;
+.status-badge-online-xs {
+	background-color: #1b7052;
+	height: 1.25rem;
+	left: 3.5em;
+	width: 1rem;
+	bottom: -2rem;
+}
+.btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 1.5rem;
+	cursor: pointer;
+	border-radius: 0.5px;
+	font-size: 1rem;
+	position: relative;
+	margin-left: 4rem;
+	background-color: transparent;
+	color: #3e4152;
 }
 
-.icon-badge{
-    font-size: 2.5rem;
-    background-color: transparent;
-}
-.badge-count{
-    background-color: #ff3f6c;
-    max-width: 1.5rem;
-    height: 2rem;
-    bottom: 1em;
-    left: 1em;
+.badge-icon {
+	position: absolute;
 }
 
-.container-text{
-    display: flex;
-    flex-direction: column;
+.icon-badge {
+	font-size: 2.5rem;
+	background-color: transparent;
+}
+.badge-count {
+	background-color: var(--primary-color);
+	max-width: 1.5rem;
+	height: 2rem;
+	bottom: 1em;
+	left: 1em;
 }
 
-.badge-container-h2{
-    font-size: 4rem;
-    color: #3e4152;
-    margin-top: 1.25rem;
+.container-text {
+	display: flex;
+	flex-direction: column;
 }
 
-.badge{
-    margin: 0 10px;
-    color: white;
-    padding: 3px 8px;
-    border-radius: 10px;
-}
-.bg-seconday{
-    background-color: #696b79;
+.badge-container-h2 {
+	font-size: 4rem;
+	color: #3e4152;
+	margin-top: 1.25rem;
 }
 
-.badge-container-h3{
-    font-size: 3rem;
-    color: #3e4152;
-    margin-top: 1.25rem;
+.badge {
+	margin: 0 10px;
+	color: var(--complimentary-text-color);
+	padding: 3px 8px;
+	border-radius: 10px;
 }
-.badge-container-h4{
-    font-size: 2.4rem;
-    color: #3e4152;
-    margin-top: 1.25rem;
+.bg-seconday {
+	background-color: var(--secondary-text-color);
 }
-.badge-container-h5{
-    font-size: 2rem;
-    color: #3e4152;
-    margin-top: 1.25rem;
+
+.badge-container-h3 {
+	font-size: 3rem;
+	color: #3e4152;
+	margin-top: 1.25rem;
 }
-.badge-container-h6{
-    font-size: 1.8rem;
-    color: #3e4152;
-    margin-top: 1.25rem;
+.badge-container-h4 {
+	font-size: 2.4rem;
+	color: #3e4152;
+	margin-top: 1.25rem;
 }
-.bg-seconday-1{
-    background-color: #ff3f6c;
-    border-radius: 10px;
+.badge-container-h5 {
+	font-size: 2rem;
+	color: #3e4152;
+	margin-top: 1.25rem;
 }
-.badge-container-p-tag{
-    color: #3e4152;
-    font-size: 1.6rem;
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem;
+.badge-container-h6 {
+	font-size: 1.8rem;
+	color: #3e4152;
+	margin-top: 1.25rem;
+}
+.bg-seconday-1 {
+	background-color: var(--primary-color);
+	border-radius: 10px;
+}
+.badge-container-p-tag {
+	color: #3e4152;
+	font-size: 1.6rem;
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem;
 }
