updating in the grid layout and CSS

--- a/Component/Vertical.css
+++ b/Component/Vertical.css
@@ -1,134 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css';
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
 
-:root{
-    font-size: 62.5%;
+.componet-container {
+	display: flex;
+	margin: 1rem 0;
+	width: 100%;
+	padding: 2rem 2rem;
+	border-radius: 0.5rem;
+	border: 2px solid #e6e6e6;
+	background-color: #eaeaec;
+	flex-wrap: wrap;
 }
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+.vertical-card {
+	max-width: 240px;
+	min-height: 400px;
+	background-color: white;
+	border-radius: 10px;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	position: relative;
+	margin: 0 1rem;
+	margin-bottom: 1rem;
 }
-.componet-container{
-    display: flex;
-    margin: 1rem 0;
-    width: 100%;
-    padding: 2rem 2rem;
-    border-radius: 0.5rem;
-    border: 2px solid #e6e6e6;
-    background-color: #eaeaec;
-
-}
-.vertical-card{
-    max-width: 240px;
-    min-height: 400px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
-    position: relative;
-    margin: 0 1rem;
-}
-.ver-card-image{
-    width: 240px;
-    height: 250px;
-    display: flex;
+.ver-card-image {
+	width: 240px;
+	height: 250px;
+	display: flex;
 }
 
-.ver-resposive-image{
-    width: 100%;
-    height: auto;
+.ver-resposive-image {
+	width: 100%;
+	height: auto;
 }
-.verticalcard-description{
-    margin: 1rem 1.5rem;
-    padding: 0.5rem 0;
-}
-
-.verticalcard-description h4{
-    font-size: 1.6rem;
-    color: #282c3f;
+.verticalcard-description {
+	margin: 1rem 1.5rem;
+	padding: 0.5rem 0;
 }
 
-.verticalcard-description >p{
-    padding: 0.5rem 0;
-    font-size: 1.3rem;
-    color: #535766;
+.verticalcard-description h4 {
+	font-size: 1.6rem;
+	color: #282c3f;
 }
 
-.ver-price{
-    padding: 0 0.25rem
+.verticalcard-description > p {
+	padding: 0.5rem 0;
+	font-size: 1.3rem;
+	color: #535766;
 }
-.discount-price{
-    font-size: 1.6rem;
-    font-weight: bold;
-    padding-left: 0;
+
+.ver-price {
+	padding: 0 0.25rem;
 }
-.actual-price{
-    font-size: 1.25rem;
-    text-decoration: line-through;
+.discount-price {
+	font-size: 1.6rem;
+	font-weight: bold;
+	padding-left: 0;
 }
-.discount-offer{
-    font-size: 1.25rem;
-    color: #ff905a;
+.actual-price {
+	font-size: 1.25rem;
+	text-decoration: line-through;
 }
-.card-ver-btn{
-    text-decoration: none;
-    font-size: 1.6rem;
-    padding: 0.8rem 1.6rem;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    margin: 0 1rem;
-    
+.discount-offer {
+	font-size: 1.25rem;
+	color: #ff905a;
 }
-.primary-add-cart{
-    color: white;
-    background-color: #ff3f6c;
+.card-ver-btn {
+	text-decoration: none;
+	font-size: 1.6rem;
+	padding: 0.8rem 1.6rem;
+	border-radius: 10px;
+	display: flex;
+	justify-content: center;
+	margin: 0 1rem;
 }
-.cart-icon{
-    margin-right: 0.5rem;
+.primary-add-cart {
+	color: white;
+	background-color: #ff3f6c;
 }
-.card-ver-rating{
-    position: absolute;
-    min-width: 60px;
-    height: 20px;
-    padding: 3px 5px;
-    font-size: 1.3rem;
-    background-color: #ff3f6c;
-    border-radius: 3px;
-    color: white;
-    bottom: 15rem;
-    left: 1rem;
+.cart-icon {
+	margin-right: 0.5rem;
 }
-.card-ver-new{
-    position: absolute;
-    min-width: 60px;
-    height: 20px;
-    padding: 3px 5px;
-    font-size: 1.3rem;
-    background-color: #ff3f6c;
-    border-radius: 3px;
-    color: white;
-    text-align: center;
-    bottom: 36rem;
+.card-ver-rating {
+	position: absolute;
+	min-width: 60px;
+	height: 20px;
+	padding: 3px 5px;
+	font-size: 1.3rem;
+	background-color: #ff3f6c;
+	border-radius: 3px;
+	color: white;
+	bottom: 15rem;
+	left: 1rem;
 }
-.overlay-text{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    background-color: rgb(234, 234, 236,0.6);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+.card-ver-new {
+	position: absolute;
+	min-width: 60px;
+	height: 20px;
+	padding: 3px 5px;
+	font-size: 1.3rem;
+	background-color: #ff3f6c;
+	border-radius: 3px;
+	color: white;
+	text-align: center;
+	bottom: 36rem;
 }
-.card-ver-text-container{
-    font-size: 2rem;
-    background-color: #eaeaec;
-    color: #3e4152;
-    padding: 1rem;
-    border-radius: 10px;
+.overlay-text {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+	background-color: rgb(234, 234, 236, 0.6);
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+}
+.card-ver-text-container {
+	font-size: 2rem;
+	background-color: #eaeaec;
+	color: #3e4152;
+	padding: 1rem;
+	border-radius: 10px;
 }
