--- a/documentation.css
+++ b/documentation.css
@@ -13,7 +13,29 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
+.container-gridlayout-document{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    'header header header header header'
+    'nav-bar main main    main   main'
+    'nav-bar main main    main   main'
+    'nav-bar main main    main   main'
+    'nav-bar main main    main   main'
+    'footer  footer footer footer footer';
+}
+header{
+    grid-area: header;
+}
+nav-bar{
+    grid-area: nav-bar;
+}
+main{
+    grid-area: main;
+}
+footer{
+    grid-area: footer;
+}
 .docu-container-body{
     display: flex;
     margin: 0rem 2rem;
@@ -58,4 +80,56 @@
     margin: 1rem 0;
     color: #3e4152;
     margin-bottom: 2rem;
+}
+.component-intro{
+    font-size: 2rem;
+    padding: 2rem 0;
+    color: #3e4152;
+    line-height: 2rem;
+}
+.code-snipet{
+    max-height: 300px;
+    padding: 1rem 0;
+    background-color: #FAFAFA;
+    margin: 2rem 0;
+    overflow: auto;
+}
+.code-snipet  iframe{
+    width: 100%;
+    border: none;
+}
+.btn-floating-docu{
+    position: fixed;
+    align-items: center;
+    background: #ff3f6c;
+    border: medium solid #cfdef9;
+    border-radius: 50%;
+    box-shadow: 0.2rem 0.2rem 1rem 0.1rem #475569;
+    color: white;
+    display: flex;
+    font-size: 2rem;
+    height: 5rem;
+    justify-content: center;
+    transition: transform 0.2s;
+    width: 5rem;
+    bottom: 6rem;
+    right: 3rem;
+    
+}
+
+@media only screen and (max-width:1024px) {
+    :root{
+        font-size: 50%;
+    }
+    .container-gridlayout-document{
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        'header'
+        'main'
+        'main'
+        'footer';
+    }
+    .body-nav{
+        display: none;
+    }
 }
