--- a/Component/v1-docs.css
+++ b/Component/v1-docs.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css';
+
 @import './Alerts.css';
 @import './Avatar.css';
 @import './Badges.css';
