--- a/documentation.css
+++ b/documentation.css
@@ -4,6 +4,10 @@
 @import './style.css';
 @import './Component/v1-docs.css';
 
+/* html{
+    scroll-behavior: smooth;
+} */
+
 :root{
     font-size: 62.5%;
 }
@@ -118,9 +122,7 @@ footer{
 }
 
 @media only screen and (max-width:1024px) {
-    :root{
-        font-size: 50%;
-    }
+    
     .container-gridlayout-document{
         grid-template-columns: 1fr;
         grid-template-areas: 
