--- a/Component/Vertical.css
+++ b/Component/Vertical.css
@@ -1,11 +1,11 @@
 .componet-container {
-	display: flex;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 	margin: 1rem 0;
-	width: 100%;
+	width: fit-content;
 	padding: 2rem 2rem;
 	border-radius: 0.5rem;
 	border: 2px solid #e6e6e6;
-	background-color: #eaeaec;
 	flex-wrap: wrap;
 }
 .vertical-card {
@@ -118,4 +118,16 @@
 	color: #3e4152;
 	padding: 1rem;
 	border-radius: 10px;
+}
+
+@media only screen and (max-width:1024px){
+	.componet-container{
+		grid-template-columns: 1fr 1fr;
+	}	
+}
+
+@media only screen and (max-width:360px){
+	.componet-container{
+		grid-template-columns: 1fr;
+	}	
 }
