--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap");
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css";
 
+html{
+	scroll-behavior: smooth;
+}
 :root {
 	font-size: 62.5%;
 	--primary-color: #ff3f6c;
@@ -16,6 +19,7 @@
 	box-sizing: border-box;
 	font-family: "Roboto", sans-serif;
 }
+
 
 .container {
 	position: sticky;
