adding: extra features of the component library

--- a/Component/v1-docs.css
+++ b/Component/v1-docs.css
@@ -5,12 +5,16 @@
 @import './Avatar.css';
 @import './Badges.css';
 @import './Button.css';
+@import './Grid.css';
 @import './HorizontialCard.css';
 @import './Forms.css';
 @import './Image.css';
+@import './Modal.css';
 @import './Navigation.css';
 @import './Rating.css';
+@import './Toast.css';
 @import './Typography.css';
 @import './Vertical.css';
+@import './Lists.css';
 
 
