--- a/Component/Image.css
+++ b/Component/Image.css
@@ -7,6 +7,9 @@
 	border-radius: 0.3rem;
 	height: 350px;
 }
+.image-circle{
+	height: 200px;
+}
 
 .background-responsive-image {
 	width: 100%;
@@ -14,6 +17,6 @@
 	border-radius: 1rem;
 }
 .circle-image {
-	width: 20%;
+	width: 15%;
 	border-radius: 50%;
 }
